<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="club.lunchmates.lunchmates.ShowEventActivity"
    tools:showIn="@layout/activity_show_event">

    <FrameLayout
        android:id="@+id/show_event_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/show_event_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="20dp"
                android:text="@string/show_event_text_name"
                android:gravity="start"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_location"
                android:layout_marginLeft="25dp"
                android:text="@string/show_event_text_date"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_event_name"
                android:layout_marginLeft="25dp"
                android:gravity="start"
                android:text="@string/show_event_text_location"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_date"
                android:layout_marginLeft="25dp"
                android:text="@string/show_event_text_time"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_not_arrived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/holo_red_light"
                android:padding="5dp"
                android:text="@string/show_event_button_not_arrived"
                android:textAllCaps="false"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/button_arrived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@android:color/holo_green_light"
                android:padding="5dp"
                android:text="@string/show_event_button_arrived"
                android:textAllCaps="false" />
        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/show_event_bottom"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <fragment
            android:id="@+id/show_event_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:context=".ShowEventActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
